--- a/Xamarin_Forms_SQLite/Xamarin_Forms_SQLite/Xamarin_Forms_SQLite.csproj
+++ b/Xamarin_Forms_SQLite/Xamarin_Forms_SQLite/Xamarin_Forms_SQLite.csproj
@@ -10,6 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012"/>
+        <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     </ItemGroup>
 </Project>
